benchmarks and checkpoint for experimental branch